fix for split tabs in collapsed folders, performance optimisation

--- a/tabhotkeyindicators/chrome.css
+++ b/tabhotkeyindicators/chrome.css
@@ -21,56 +21,62 @@
 
 @media -moz-pref("mod.tab_hotkey_hints.last_tab") {
   zen-workspace[active="true"] .zen-workspace-tabs-section
-  > tab:not([pinned]):not([aria-hidden="true"]):not([folder-active="true"]):nth-last-child(2)
-  .tab-content::before,
+  > tab:not([pinned]):not([aria-hidden="true"]):not([folder-active="true"]):nth-last-child(2),
   zen-workspace[active="true"] tab-group:not(:has(~ tab))
-  tab:not([pinned]):not([aria-hidden="true"]):not([folder-active="true"]):nth-last-child(1)
-  .tab-content::before {
-    content: "9";
-    display: unset;
-    z-index: 1;
-    font-size: var(--mod-tab_hotkey_hints-font_size);
-    font-weight: var(--mod-tab_hotkey_hints-font_weight);
-    position: absolute;
-    opacity: var(--mod-tab_hotkey_hints-opacity);
-    color: var(--mod-tab_hotkey_hints-color);
-    text-shadow: var(--mod-tab_hotkey_hints-text_shadow);
-    @media (-moz-pref("mod.tab_hotkey_hints.position", "topright")) {
-        right: var(--mod-tab_hotkey_hints-h_margin);
-        top: var(--mod-tab_hotkey_hints-v_margin);
-    }
-    @media (-moz-pref("mod.tab_hotkey_hints.position", "topleft")) {
-        left: var(--mod-tab_hotkey_hints-h_margin);
-        top: var(--mod-tab_hotkey_hints-v_margin);
-    }
-    @media (-moz-pref("mod.tab_hotkey_hints.position", "botright")) {
-        right: var(--mod-tab_hotkey_hints-h_margin);
-        bottom: var(--mod-tab_hotkey_hints-v_margin);
-    }
-    @media (-moz-pref("mod.tab_hotkey_hints.position", "botleft")) {
-        left: var(--mod-tab_hotkey_hints-h_margin);
-        bottom: var(--mod-tab_hotkey_hints-v_margin);
+  tab:not([pinned]):not([aria-hidden="true"]):not([folder-active="true"]):nth-last-child(1) {
+    .tab-content::before {
+      content: "9";
+      display: unset;
+      z-index: 1;
+      font-size: var(--mod-tab_hotkey_hints-font_size);
+      font-weight: var(--mod-tab_hotkey_hints-font_weight);
+      position: absolute;
+      opacity: var(--mod-tab_hotkey_hints-opacity);
+      color: var(--mod-tab_hotkey_hints-color);
+      text-shadow: var(--mod-tab_hotkey_hints-text_shadow);
+      @media (-moz-pref("mod.tab_hotkey_hints.position", "topright")) {
+          right: var(--mod-tab_hotkey_hints-h_margin);
+          top: var(--mod-tab_hotkey_hints-v_margin);
+      }
+      @media (-moz-pref("mod.tab_hotkey_hints.position", "topleft")) {
+          left: var(--mod-tab_hotkey_hints-h_margin);
+          top: var(--mod-tab_hotkey_hints-v_margin);
+      }
+      @media (-moz-pref("mod.tab_hotkey_hints.position", "botright")) {
+          right: var(--mod-tab_hotkey_hints-h_margin);
+          bottom: var(--mod-tab_hotkey_hints-v_margin);
+      }
+      @media (-moz-pref("mod.tab_hotkey_hints.position", "botleft")) {
+          left: var(--mod-tab_hotkey_hints-h_margin);
+          bottom: var(--mod-tab_hotkey_hints-v_margin);
+      }
     }
   }
 }
 @media not (-moz-pref("mod.tab_hotkey_hints.last_tab")) {
   zen-workspace[active="true"] .zen-workspace-tabs-section
-  > tab:not([pinned]):not([aria-hidden="true"]):not([folder-active="true"]):nth-last-child(2)
-  .tab-content::before,
+  > tab:not([pinned]):not([aria-hidden="true"]):not([folder-active="true"]):nth-last-child(2),
   zen-workspace[active="true"] tab-group:not(:has(~ tab))
-  tab:not([pinned]):not([aria-hidden="true"]):not([folder-active="true"]):nth-last-child(1)
-  .tab-content::before {
-    display: none;
+  tab:not([pinned]):not([aria-hidden="true"]):not([folder-active="true"]):nth-last-child(1) {
+    .tab-content::before {
+      display: none;
+    }
   }
 }
 
 #tabbrowser-tabs {
   #zen-essentials tab,
-  zen-workspace[active="true"] tab[aria-hidden="true"][folder-active="true"]:not([style*="height: 0px"]),
-  zen-workspace[active="true"] tab:not([aria-hidden="true"]):not([style*="height: 0px"]) {
+  zen-workspace[active="true"] .zen-workspace-tabs-section > zen-folder:not([collapsed]) tab[aria-hidden="true"][folder-active="true"]:not([style*="height: 0px"]),
+  zen-workspace[active="true"] .zen-workspace-tabs-section > zen-folder:not([collapsed]) tab:not([aria-hidden="true"]):not([style*="height: 0px"]),
+  zen-workspace[active="true"] .zen-workspace-tabs-section > tab[aria-hidden="true"][folder-active="true"]:not([style*="height: 0px"]),
+  zen-workspace[active="true"] .zen-workspace-tabs-section > tab:not([aria-hidden="true"]):not([style*="height: 0px"]):not([zen-empty-tab="true"]):nth-child(-n+9) {
     counter-increment: tabcounter;
   }
-  .tab-content::after {
+  #zen-essentials tab .tab-content::after,
+  zen-workspace[active="true"] .zen-workspace-tabs-section > zen-folder:not([collapsed]) tab[aria-hidden="true"][folder-active="true"]:not([style*="height: 0px"]) .tab-content::after,
+  zen-workspace[active="true"] .zen-workspace-tabs-section > zen-folder:not([collapsed]) tab:not([aria-hidden="true"]):not([style*="height: 0px"]) .tab-content::after,
+  zen-workspace[active="true"] .zen-workspace-tabs-section > tab[aria-hidden="true"][folder-active="true"]:not([style*="height: 0px"]) .tab-content::after,
+  zen-workspace[active="true"] .zen-workspace-tabs-section > tab:not([aria-hidden="true"]):not([style*="height: 0px"]):nth-child(-n+9) .tab-content::after {
     content: counter(tabcounter, tabhint);
     font-size: var(--mod-tab_hotkey_hints-font_size);
     font-weight: var(--mod-tab_hotkey_hints-font_weight);
